# keynotepptx

./: .gitignore  README.md  app.py  keynotepptx.yaml  pyproject.toml  requirements.txt
KeynotePPTX/: .gitignore  Package.resolved  Package.swift  build_app_dist.sh
KeynotePPTX/keynotepptx/: ContentView.swift  Persistence.swift  keynotepptxApp.swift
KeynotePPTX/keynotepptx.xcodeproj/: project.pbxproj
KeynotePPTX/keynotepptx/Conversion/: PDFConverter.swift
KeynotePPTX/keynotepptx/Hashing/: ImageHasher.swift  ImageRenderer.swift
KeynotePPTX/keynotepptx/Matching/: MatchEngine.swift  SVGPDFPairValidator.swift
KeynotePPTX/keynotepptx/Model/: AppState.swift
KeynotePPTX/keynotepptx/Parsing/: KeynoteParser.swift  PPTXParser.swift  SlideGraphTraversal.swift
KeynotePPTX/keynotepptx/Patching/: PPTXPatcher.swift
KeynotePPTX/keynotepptx/Views/: CandidateCardView.swift  DoneView.swift  ErrorView.swift  HashDistanceLabel.swift  KindBadge.swift  PatchOptionsView.swift  ProcessingView.swift  QualityBadge.swift  ReviewOnboardingView.swift  ReviewRowView.swift  ReviewView.swift  RootView.swift  ThumbnailView.swift  (+1 more)
KeynotePPTX/keynotepptxTests/: FingerprintTests.swift  ImageHasherTests.swift  ImageRendererTests.swift  MatchingAlgorithmTests.swift  PDFConversionTests.swift  PDFConverterTests.swift  SVGPDFPairValidatorTests.swift  SVGRenderingPipelineTests.swift
KeynotePPTX/keynotepptxUITests/: keynotepptxUITests.swift  keynotepptxUITestsLaunchTests.swift
static/: styles.css
templates/: downloads.html  index.html  patch_options.html  patch_progress.html  review.html
(+31 files in other folders)
