[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keynotepptx"
version = "0.1.0"
description = "Replace low-quality PPTX images with original Keynote source assets"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pymupdf>=1.24",
    "opencv-python-headless>=4.8",
    "keynote-parser>=1.14",
    "werkzeug>=3.0",
]

[project.scripts]
keynotepptx = "app:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
include = ["app.py", "templates", "static"]
